--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
             <div class="title">THE BRICKS</div>
             <div class="main">
                 <div>
-                    <canvas id="canvas" width="500" height="700"></canvas>
+                    <canvas id="canvas" width="500" height="700">
+                        <img src="img/ice1.png" id="ice">
+
+
+                    </canvas>
+                    
                 </div>
                 <div class="buttons">
                     <button type="button" class="play" onclick="drawIt()">PLAY</button>
