--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <link rel="stylesheet" href="style.css">
     </head>
-    <body>
+    <body onload="rules()">
         <div class="body">
             <div class="title">THE BRICKS</div>
             <div class="main">
@@ -37,6 +37,7 @@
     </body>
 <script src="script.js"></script>
 <script src="jQuery.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </html>
 
 
